# work_process_detect

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.f56bfbb  build_and_run.bat  camera.cpp  camera.h  engine.cpp  engine.h  extractFrameFromVideo.py  imagecleaner.cpp  imagecleaner.h  kpts_test.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  predict_video.py  readme.md  reliableimagesaver.cpp  reliableimagesaver.h  run.bat  vscodeTest_zh_CN.ts  yolov8.cpp  yolov8.h
YOLO__model_test/: export_model.py  test_model.py
backup/: build_and_run.bat
smart200/: 动作检测报警.smart
